[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-spinal-pairing"
version = "0.1.0"
authors = [
    { name="James R. McIntosh", email="j.mcintosh@columbia.edu" }
]
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
dependencies = [
    "numpy==2.1.0", # >=1.24.2"
    "pandas==2.2.2",  # >=2.0.2"
    "scikit-learn==1.5.1",  #  #>=1.2.1
    "jax==0.4.31; platform_system != 'Windows'",
    "jax==0.4.26; platform_system == 'Windows'",
    "jaxlib==0.4.31",  # jaxlib>=0.4.24
    "numpyro==0.15.2",  # >=0.13.2
    "arviz==0.19.0",  # >=0.18.0
    "matplotlib>=3.8.3",
    "seaborn>=0.12.2",
    "toml==0.10.2",  # >=0.3.8
    "statsmodels==0.14.2",
    "hbmep==0.6.2",
    "graphviz==0.20.3",
    "dill==0.3.8",
    "openpyxl==3.1.5",
    "pyarrow==17.0.0",
    "zenodo_get==1.6.1",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.26.0",
    "cython>=3.0.11"
]

[project.urls]
"Homepage" = "https://github.com/jrmxn/brain-spinal-pairing"